--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
-<title></title>
-<main></main>
-<script src="/bundle.js"></script>
+<head>
+    <title>Language Exchange</title>
+    <meta name="description" content="Find your perfect Language Exchange Partner!">
+</head>
+<body>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <main></main>
+    <script src="/bundle.js"></script>
+</body>
