Wlecome Page CSS

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <main></main>
+    <link href="https://fonts.googleapis.com/css?family=Ovo|Pinyon+Script" rel="stylesheet">
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4V83c8iHE1TvDfHhsbkFrziZ2A46XWEk&libraries=places&callback=initMap"
+        async defer></script> -->
     <script src="/bundle.js"></script>
 </body>
